src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Community_size__c</fullName>
        <label>Community size</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_spatial_distribution__c</fullName>
        <label>Community spatial distribution</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_structure__c</fullName>
        <label>Community structure</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_to_Agreements__c</fullName>
        <label>Compliance to Agreements</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connection_to_fisheries_mgmt_authority__c</fullName>
        <label>Connection to fisheries mgmt authority</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conselho_deliberativo__c</fullName>
        <label>Conselho deliberativo</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conservation_project_conducted_in_area__c</fullName>
        <label>Conservation project conducted in area</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conservation_value__c</fullName>
        <label>Conservation value</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversation_Score__c</fullName>
        <label>Conversation Score</label>
        <picklist>
            <picklistValues>
                <fullName>Must Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coral_reef_condition__c</fullName>
        <label>Coral reef condition</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Critical_thinking_skills__c</fullName>
        <label>Critical thinking skills</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cross_agency_cooperation_experience__c</fullName>
        <label>Cross-agency cooperation experience</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_work_linking_to_Pride__c</fullName>
        <label>Current work linking to Pride</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_maker_support__c</fullName>
        <label>Decision-maker support</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependence_on_middle_man__c</fullName>
        <label>Dependence on middle man</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donor_Website__c</fullName>
        <description>This is a reference</description>
        <formula>Account.Website</formula>
        <inlineHelpText>This is the Donor/Partner Website</inlineHelpText>
        <label>Donor Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOI_Status__c</fullName>
        <description>Allows PMs to show workflow of Expression of Interests. Selecting &quot;Move to Fit&quot; will trigger applicant move to Fit Assessment stage.</description>
        <label>EOI Status</label>
        <picklist>
            <picklistValues>
                <fullName>EOI Not Screened</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_importance_of_fishing__c</fullName>
        <label>Economic importance of fishing</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Background__c</fullName>
        <label>Educational Background</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment_background__c</fullName>
        <label>Employment Background</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environmental_Security_Risk__c</fullName>
        <label>Environmental Security Risk</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Fishers_at_Site__c</fullName>
        <label>Estimated Number of Fishers at Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_People_at_Site__c</fullName>
        <label>Estimated Number of People at Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_number_of_hectares_at_site__c</fullName>
        <label>Estimated number of hectares at site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existence_of_farmers_cooperatives__c</fullName>
        <label>Existence of farmers&apos; cooperatives</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_NTZ_reserve_effectiveness__c</fullName>
        <label>Existing NTZ/reserve effectiveness</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_in_fisheries_data_collection__c</fullName>
        <label>Experience in fisheries data collection</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_with_BR_partners__c</fullName>
        <label>Experience with BR partners</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_with_audience_and_community__c</fullName>
        <label>Experience with audience and community</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_with_fishing_community__c</fullName>
        <label>Experience with fishing community</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Communication__c</fullName>
        <label>FF Communication</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Critical_Thinking__c</fullName>
        <label>FF Critical Thinking</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Educational_Background__c</fullName>
        <label>FF Educational Background</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Leadership__c</fullName>
        <label>FF Leadership</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Org__c</fullName>
        <formula>Fisheries_Fellows__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FF Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Personal_Motivation__c</fullName>
        <label>FF Personal Motivation</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Project_Management__c</fullName>
        <label>FF Project Management</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Site_Understanding__c</fullName>
        <label>FF Site Understanding</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Work_Experience__c</fullName>
        <label>FF Work Experience</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Working_Relationship__c</fullName>
        <label>FF Working Relationship</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Familiarity_working_with_data_collection__c</fullName>
        <label>Familiarity working with data collection</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farmer_population_size__c</fullName>
        <label>Farmer population size</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fertilizer_pesticide_monitoring_capacity__c</fullName>
        <label>Fertilizer/pesticide monitoring capacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Comments_on_Applicant__c</fullName>
        <description>renamed label &amp; name from &quot;Final Decision Comments&quot; for layout v2.</description>
        <label>Final Comments on Applicant</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Decision__c</fullName>
        <description>created for application layout v2.  Represents final decision by leadership team.  Deferred means deferring the decision of whether to accept, not accepted but deferred admittance until a later cohort.</description>
        <label>Final Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Package_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2.</description>
        <label>Final Package Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_ToC_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2.</description>
        <label>Final ToC Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Support_for_Pride__c</fullName>
        <label>Financial Support for Pride</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_ability_to_sustain_impact__c</fullName>
        <label>Financial ability to sustain impact</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fish_abundance_in_NTZ__c</fullName>
        <label>Fish abundance in NTZ</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Email__c</fullName>
        <formula>Fisheries_Fellows__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fisheries Fellow Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Has_Degree__c</fullName>
        <formula>TEXT(Fisheries_Fellows__r.Has_BA_degree__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fisheries Fellow - Has Degree?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Interview_Comments__c</fullName>
        <label>Fisheries Fellow Interview Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Interview_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fisheries Fellow Interview Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Interview_Method__c</fullName>
        <label>Fisheries Fellow Interview Method</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Interviewer__c</fullName>
        <label>Fisheries Fellow Interviewer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Quality__c</fullName>
        <formula>( FF_Working_Relationship__c + FF_Work_Experience__c + FF_Communication__c + FF_Project_Management__c + FF_Personal_Motivation__c + FF_Site_Understanding__c + FF_Educational_Background__c + FF_Critical_Thinking__c +  FF_Leadership__c )  / 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fisheries Fellow Quality</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellow_Years_with_Org__c</fullName>
        <formula>Fisheries_Fellows__r.Years_with_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fisheries Fellow - Years with Org</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellows_Bio__c</fullName>
        <formula>Fisheries_Fellows__r.Campaign_Manager_Bio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fisheries Fellows Bio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fisheries_Fellows__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fisheries Fellows</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Fisheries Fellows)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fisheries_management_regulations__c</fullName>
        <label>Fisheries management regulations</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fishing_ground_proximity__c</fullName>
        <label>Fishing ground proximity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fishing_licenses__c</fullName>
        <label>Fishing licenses</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fishing_practices_nearshore__c</fullName>
        <label>Fishing practices nearshore</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fit_Assessment_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First conversation after Pre-Application is submitted.  Between Rare Regional Recruiter and Key Contact at Lead Agency. This conversation is to &quot;sell&quot; Rare and set clear expectations of Rare and Lead Agency Partner.</description>
        <label>Fit Assessment Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency_of_destructive_fishing__c</fullName>
        <label>Frequency of destructive fishing</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_MOU_Comments__c</fullName>
        <label>Funding/MOU Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_opportunities_for_site__c</fullName>
        <label>Funding opportunities for site</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G9_Total_Applicant_Score__c</fullName>
        <formula>IF( No_BINGO__c ,
( (SC2_LA_average__c * 0.3) + ( SC2_CM_average__c * 0.15) + (Fisheries_Fellow_Quality__c * 0.15) +  (SC2_BC_average__c * 0.2) + (SC2_CI_average__c * 0.2) )
,
( (SC2_LA_average__c * 0.25) + ( SC2_CM_average__c * 0.125) + ( Fisheries_Fellow_Quality__c * 0.125)  + (SC2_BC_average__c * 0.2) + (SC2_CI_average__c * 0.2) + (SC2_SP_average__c * 0.1) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G9 Total Applicant Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Government_agriculture_project_exists__c</fullName>
        <label>Government agriculture project exists</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Government_endorsement__c</fullName>
        <label>Government endorsement</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Habitat_diversity__c</fullName>
        <label>Habitat diversity</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Habitat_representation__c</fullName>
        <label>Habitat representation</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Household_Assets__c</fullName>
        <label>Household Assets</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Pride_Address_Thematic_Threat__c</fullName>
        <label>How Pride Address Thematic Threat?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_capacity_to_manage_fisheries__c</fullName>
        <label>IP capacity to manage fisheries</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISSM_support_network_existence__c</fullName>
        <label>ISSM support network existence</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Theory_of_Change__c</fullName>
        <label>Impact / Theory of Change</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementing_Partner_Score__c</fullName>
        <label>Implementing Partner Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importance_of_farming_to_farmers__c</fullName>
        <label>Importance of farming to farmers</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increase_in_human_populations__c</fullName>
        <label>Increase in human populations</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Influence_and_partnerships__c</fullName>
        <label>Influence and partnerships</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_for_fisheries_management__c</fullName>
        <label>Infrastructure for fisheries management</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_ability_to_interact_w_experts__c</fullName>
        <label>Interest &amp; ability to interact w experts</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_implementing_TURFs__c</fullName>
        <label>Interest  implementing TURFs</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_conducted_by__c</fullName>
        <label>Interview method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skype</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <label>Interviewer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviews_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for application layout v2</description>
        <label>Interviews Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues_or_red_flags__c</fullName>
        <description>Any areas where campaign does not meet Rare criteria</description>
        <label>Issues or risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge_of_Pride__c</fullName>
        <label>Knowledge of Pride</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Knowledge_of_Pride_and_obligations__c</fullName>
        <label>Knowledge of Pride and Obligations</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAP_willing_to_meet_requirements__c</fullName>
        <label>IP willing to meet requirements?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Conversation_Comments__c</fullName>
        <label>IP Conversation Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Conversation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Conversation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Interview_Method__c</fullName>
        <label>Implementing Partner Interview Method</label>
        <picklist>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skype</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Interviewer__c</fullName>
        <label>Implementing Partner Interviewer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Total_Score__c</fullName>
        <formula>Knowledge_of_Pride_and_obligations__c +  Understanding_the_site_threats_and_role__c +  Potential_for_Sustainability__c  +  Site_Quality__c + Impact_Theory_of_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementing Partner Total Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood_to_stay_at_IP__c</fullName>
        <label>Likelihood to stay at IP</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Funding_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Funding Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_technical_partner_existence__c</fullName>
        <label>Local technical partner existence</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_advantage__c</fullName>
        <label>Location advantage</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_term_Site_Strategy__c</fullName>
        <label>Long-term Site Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_term_commitment_to_site__c</fullName>
        <label>Long-term commitment to site</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOU_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2.</description>
        <label>MOU Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOU_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOU Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_threat_fits_cohort_theme__c</fullName>
        <label>Main threat fits cohort theme</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Major_threats_impeding_campaign_results__c</fullName>
        <label>Major threats impeding campaign results</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Plan__c</fullName>
        <label>Management Plan</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marine_Reserve__c</fullName>
        <label>Marine Reserve</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Pride Applications</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Masters_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the candidate will be enrolling in the UTEP masters degree</description>
        <label>Masters Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mindset_of_solutionology__c</fullName>
        <label>Mindset of solutionology</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monitoring_experience__c</fullName>
        <label>Monitoring experience</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivation__c</fullName>
        <label>Motivation</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nature_and_extent_of_illegal_fishing__c</fullName>
        <label>Nature and extent of illegal fishing</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Application</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>